<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/calendar_day_header"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@color/purple_500"
    android:gravity="center">

    <TextView
        android:id="@+id/first_day_header"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/first_day_header"
        android:textColor="@color/white"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/second_day_header"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/second_day_header"
        android:textColor="@color/white"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/third_day_header"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/third_day_header"
        android:textColor="@color/white"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/fourth_day_header"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/fourth_day_header"
        android:textColor="@color/white"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/fifth_day_header"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/fifth_day_header"
        android:textColor="@color/white"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/sixth_day_header"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/sixth_day_header"
        android:textColor="@color/white"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/seventh_day_header"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/seventh_day_header"
        android:textColor="@color/white"
        android:textSize="14sp"/>

</LinearLayout>