<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:id="@+id/grp_nav_actions"
        android:checkableBehavior="single">
        <item
            android:id="@+id/btn_nav_home"
            android:icon="@drawable/ic_home_24dp"
            android:contentDescription="@string/title_my_bookings"
            android:title="@string/title_my_bookings"
            android:checked="true"/>
        <item
            android:id="@+id/btn_nav_settings"
            android:icon="@drawable/ic_settings_24dp"
            android:contentDescription="@string/action_settings"
            android:title="@string/action_settings"
            android:checked="false"/>
        <item
            android:id="@+id/btn_nav_sign_out"
            android:icon="@drawable/ic_logout_24dp"
            android:contentDescription="@string/action_sign_out"
            android:title="@string/action_sign_out"
            android:checkable="false"/>
    </group>
</menu>