<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:contentDescription="@string/notification_icon_description"
        android:src="@drawable/ic_notification_24dp"/>

    <TextView
        android:id="@+id/notification_time"
        android:layout_width="0dp"
        android:layout_weight="8"
        android:layout_height="50dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_gravity="start|center_vertical"
        android:gravity="center_vertical"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/notification_time_placeholder"/>

    <ImageView
        android:id="@+id/notification_delete"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:contentDescription="@string/notification_remove_button_description"
        android:src="@drawable/ic_remove_notification_24dp"/>

</LinearLayout>